TEST_PROGRAMS/INVALID/armin_taheri/invalid6.min
#no lone expression

var x: int;
(3+2)*x + 1;
